                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 30-07-2005 fixed: Use default MS Dash settings for analog playback (a few xboxes can't handle the dolby surround setting)
 - 30-07-2005 fixed: seeking in paplayer doesn't work for VBR mp3 files where the xing header is located before the first mp3 frame
 - 30-07-2005 updated: Finnish language file (Thnx to jutski)
 - 30-07-2005 updated: Korean language file (Thnx to AkoXko)
 - 30-07-2005 updated: Chinese (Simple) language file (Thnx to hibaby)
 - 30-07-2005 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 30-07-2005 updated: German (Austrian) language file (Thnx to CEOMR)
 - 28-07-2005 fixed: film detection not working properly in dvdplayer
 - 28-07-2005 added: Threaded video renderer, quite big performace boost when using high quality pixelshader
 - 28-07-2005 added: Progress dialog for nfo lookups.
 - 28-07-2005 changed: $INFO() changed to $INFO[] to avoid conflicts with () used in info fields.
 - 27-07-2005 fixed: python did not work at all after the dll update
 - 27-07-2005 fixed: Crop offset in HQ renderer with new reinterlacing active.
 - 27-07-2005 fixed: Crash in skins when you move off a window that contains the RAM control.
 - 27-07-2005 fixed: SF bug [ 1245551 ] - incorrect heading of numeric dialogs.
 - 27-07-2005 fixed: Album Information in Library view context menu is now only enabled if appropriate.
 - 27-07-2005 changed: Faster chroma upsampling for interlaced sources.
 - 27-07-2005 fixed: when a folder is added to a playlist via the web, its now added in the correct sorted order
 - 27-07-2005 enabled: support for the renderer to switch interlaced/progressive mode ona a frame to frame bases