@@ -1,51 +1,75 @@
+<!-- This file contains the mapping of actions to sounds                    -->
+
+<!-- The <actions> section contains global mapping                          -->
+
+<!-- To map a action to a sound, add a block like this to <actions>:        -->
+<!--    <action>                                                            -->
+<!--      <name>left</name>                                                 -->
+<!--      <file>cursor.wav</file>                                           -->
+<!--    </action>                                                           -->
+<!-- Where <name> specifies the action to map a sound to and <file> the wav -->
+<!-- file to play when the action occurs.                                   -->
+
+<!-- Valid entries for <name> can be found at                               -->
+<!-- http://manual.xboxmediacenter.de/wakka.php?wakka=KeyMappingXML&v=6gu   -->
+
+
+<!-- Also window specific sound can be played                               -->
+
+<!-- To map a sound to a window, add a block like this to <windows>:        -->
+<!--    <window>                                                            -->
+<!--      <name>infodialog</name>                                           -->
+<!--      <activate>notify.wav</activate>                                   -->
+<!--      <deactivate>out.wav</deactivate>                                  -->
+<!--    </window>                                                           -->
+<!-- Where <name> specifies the window to map a sound to                    -->
+<!-- <activate> and <deactivate> are the events a sound can be mapped to    -->
+<!-- by setting the file to play.                                           -->
+
+<!-- Valid entries for <name> can be found at                               -->
+<!-- http://manual.xboxmediacenter.de/wakka.php?wakka=WindowList&v=13k6     -->
+
+<!-- Note: Only wav files are supported                                     -->
+
 <sounds>
   <actions>
     <action>
-      <description>Move Left</description>
-      <id>1</id>
+      <name>left</name>
       <file>cursor.wav</file>
     </action>
     <action>
-      <description>Move Right</description>
-      <id>2</id>
+      <name>right</name>
       <file>cursor.wav</file>
     </action>
     <action>
-      <description>Move Up</description>
-      <id>3</id>
+      <name>up</name>
       <file>cursor.wav</file>
     </action>
     <action>
-      <description>Move Down</description>
-      <id>4</id>
+      <name>down</name>
       <file>cursor.wav</file>
     </action>
     <action>
-      <description>Select Item</description>
-      <id>7</id>
+      <name>select</name>
       <file>click.wav</file>
     </action>
     <action>
-      <description>Parent Directory</description>
-      <id>9</id>
+      <name>parentdir</name>
       <file>back.wav</file>
     </action>
     <action>
-      <description>Previous Menu</description>
-      <id>10</id>
+      <name>previousmenu</name>
       <file>back.wav</file>
     </action>
     <action>
-      <description>Screenshot</description>
-      <id>85</id>
+      <name>screenshot</name>
       <file>shutter.wav</file>
     </action>
   </actions>
 
   <windows>
     <window>
-      <description>Dialog Kai Toast</description>
-      <id>107</id>
+      <name>infodialog</name>
       <activate>notify.wav</activate>
       <deactivate>out.wav</deactivate>
     </window>
